# files

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  style.css  todo.md
src/: main.rs  metrics.rs  password.rs  routes.rs
src/middleware/: authorization.rs  mod.rs  status_code.rs
src/routes/: delete.rs  directory.rs  error.rs  get.rs  info.rs  notfound.rs  preview.rs  raw.rs  upload.rs
src/routes/api/: delete.rs  directory.rs  mod.rs  rename.rs  upload.rs
src/routes/files/: directory.rs  info.rs  mod.rs  preview.rs  raw.rs
templates/: directory.html  error.html  login.html  preview.html
templates/previews/: audio.html  file.html  image.html  text.html  video.html
