[package]
name = "files"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12.1"
axum = "0.7.5"
dotenv = "0.15.0"
minijinja = "2.1.2"
rand = "0.8.5"
serde_json = "1.0.125"
tokio = { version = "1.39.3", features = ["full"] }
tokio-util = "0.7.11"
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
