[package]
name = "files"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12.1"
axum = "0.7.5"
chrono = "0.4.38"
dotenv = "0.15.0"
mime_guess = "2.0.5"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.125"
tokio = { version = "1.39.3", features = ["full"] }
tokio-util = "0.7.11"
tower = "0.5.0"
tower-http = { version = "0.5.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
