[package]
name = "files"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12.1"
axum = { version = "0.7.5", features = ["multipart"] }
chrono = "0.4.38"
dotenv = "0.15.0"
metrics = "0.24.0"
metrics-exporter-prometheus = "0.16.0"
mime_guess = "2.0.5"
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.127"
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = "0.7.11"
tower = { version = "0.5.1", features = ["limit", "buffer", "util"] }
tower-http = { version = "0.6.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
walkdir = "2.5.0"
